# genai-playground

./: README.md  pyproject.toml
genai/: chat_demo.py  hello_world.py  image_gen.py  text_gen.py  utils.py  wordle.py
